# zkpyc

./: .gitignore  COPYING  COPYING.md  Cargo copy.toml  Cargo.toml  NOTICE  README.md  zkpyc.asdl
examples/: _3_plus_int.py  _3_plus_int.py.pin  _3_plus_int.py.vin  and_composition.py  and_composition.py.pin  and_composition.py.vin  arr_cls_arr_cls.py  arr_cls_arr_cls.py.pin  arr_cls_arr_cls2.py  arr_cls_arr_cls2.py.pin  arr_cls_arr_cls2.py.vin  arr_cpy.py  arr_cpy.py.pin  arr_cpy.py.vin  assert.py  assert.py.pin  assert.py.vin  assert2.py  assert2.py.pin  assert2.py.vin  div.py  div.py.pin  div.py.vin  edwardsAdd.py  edwardsAdd.py.pin  edwardsAdd.py.vin  example.py  example.zok  field_max.py  from_bits.py  from_bits.py.pin  from_bits.py.vin  int_div.py  int_div.py.pin  int_div.py.vin  isolate_assert.py  isolate_assert.py.vin  lookup_window.py  lookup_window.py.pin  lookup_window.py.vin  (+53 more)
examples/zk_types/: types.py
scripts/: prove_r1cs_py_test.zsh
src/: lib.rs
src/export/: mod.rs  setup.rs
src/front/: mod.rs
src/front/c_fork/: ast_utils.rs  mod.rs  term.rs  types.rs
src/front/python/: mod.rs  parser.rs  term.rs
src/front/python/pyvisit/: mod.rs  pyvmut.rs  walkfns.rs
src/front/zsharp/: ast_example.txt  ast_mm.txt  ast_struct.txt  mod.rs  parser.rs  term.rs
src/front/zsharp/zvisit/: zgenericinf.rs
src/utilities/: cp_link.rs  proof.rs  r1cs.rs  scalar_fields.rs  trans.rs
zkpyc-core/: Cargo.toml
zkpyc-core/src/export/: setup.rs
zkpyc-core/src/front/: mod.rs
zkpyc-core/src/front/python/: mod.rs  parser.rs  term.rs
zkpyc-core/src/utilities/: mod.rs  scalar_fields.rs  wit_comp.rs
zkpyc-python/: Cargo.toml  MANIFEST.in  README.md  build.rs  pyproject.toml  setup.py
zkpyc-python/demos/: sudoku.ipynb
zkpyc-python/notebooks/: zkpytoolkit_demo.ipynb
zkpyc-python/python/zkpyc/: __about__.py  __init__.py  zkp.py
zkpyc-python/python/zkpyc/bindings/: __init__.py
zkpyc-python/rust/: OLDCargo.toml
zkpyc-python/rust/src/: backend.rs  compiler.rs  conversions.rs  ff_constants.rs  lib.rs  utilities.rs
zkpyc-stdlib/: Cargo.toml  README.md  build.rs
zkpyc-stdlib/src/: lib.rs
zkpyc-stdlib/stdlib/: __init__.py
zkpyc-stdlib/stdlib/commitment/: __init__.py
zkpyc-stdlib/stdlib/ecc/: babyjubjubParams.py  jubjubParams.py
zkpyc-stdlib/stdlib/hashes/pedersen/bls12_381/: hash512bit.py
zkpyc-stdlib/stdlib/hashes/pedersen/bn256/: hash512bitBool.py
zkpyc-stdlib/stdlib/hashes/pedersen/ristretto255/: generators.py  hash512bitBool.py
zkpyc-stdlib/stdlib/hashes/poseidon/: constants.py  poseidon.py
zkpyc-stdlib/stdlib/hashes/sha256/: sha256.py
zkpyc-stdlib/stdlib/utils/: __init__.py
zkpyc-stdlib/stdlib/utils/casts/: int_from_bits.py  int_to_bits.py
zkpyc-stdlib/stdlib/utils/multiplexer/: lookup3bitSigned.py
zkpyc-stdlib/stdlib/utils/pack/bool/: unpack255_unchecked.py
zkpyc_compiler/: Cargo.toml
zkpyc_compiler/src/: lib.rs
zkpyc_compiler/src/export/: mod.rs
zkpyc_compiler/src/front/: mod.rs
zkpyc_compiler/src/front/python/: mod.rs  parser.rs
zkpyc_compiler/src/front/python/pyvisit/: mod.rs
zkpyc_compiler/src/utilities/: bellman.rs  mirage.rs  opt.rs
zkpyc_python/: MANIFEST.in  pyproject.toml
zkpyc_python/extra/doppio_curve/: README.md  derive.py  derive.sage
zkpyc_python/extra/pedersen_generators/: README.md  run.py
zkpyc_python/extra/pedersen_generators/ecc_params/: config.py  field.py  params.py
zkpyc_python/extra/pedersen_generators/ecc_params/gadgets/: pedersenHasher.py
zkpyc_python/src/rust/: Cargo.toml  build.rs
zkpyc_python/src/rust/src/: compiler.rs  conversions.rs  lib.rs
zkpyc_python/src/rust/zkif-bellman/: Cargo.toml
zkpyc_python/src/rust/zkif-bellman/src/: import.rs  lib.rs  zkif_backend.rs  zkif_cs.rs
zkpyc_python/src/rust/zkif-bellman/src/demo_import_from_zokrates/: demo.rs  exec_zokrates.rs
zkpyc_python/src/rust/zkif-bulletproofs/: Cargo.toml
zkpyc_python/src/rust/zkif-bulletproofs/benches/: r1cs.rs  range_proof.rs
zkpyc_python/src/rust/zkif-bulletproofs/src/: inner_product_proof.rs  lib.rs
zkpyc_python/src/rust/zkif-bulletproofs/src/range_proof/: mod.rs
zkpyc_python/src/rust/zkif-bulletproofs/tests/: range_proof.rs
zkpyc_python/src/zkpyc/: input_gen.py  types.py  zkp.py
zkpyc_python/src/zkpyc/bindings/: __init__.py
zkpyc_python/src/zkpyc/stdlib/: EMBED.py
zkpyc_python/src/zkpyc/stdlib/commitment/pedersen/bls12_381/: commit.py
zkpyc_python/src/zkpyc/stdlib/commitment/pedersen/ristretto255/: commit.py
zkpyc_python/src/zkpyc/stdlib/ecc/: doppioParams.py  edwardsAdd.py  edwardsCompress.py  edwardsParams.py
zkpyc_python/src/zkpyc/stdlib/hashes/: __init__.py
zkpyc_python/src/zkpyc/stdlib/hashes/pedersen/bls12_381/: generators.py  hash512bitBool.py
zkpyc_python/src/zkpyc/stdlib/hashes/pedersen/bn256/: generators.py
zkpyc_python/src/zkpyc/stdlib/hashes/sha256/: shaRound.py
zkpyc_python/src/zkpyc/stdlib/utils/multiplexer/: lookup2bit.py
zkpyc_python/src/zkpyc/stdlib/utils/pack/bool/: nonStrictUnpack256.py  unpack254_unchecked.py
zkpyc_stdlib/: Cargo.toml  build.rs
zkpyc_stdlib/src/: lib.rs
zkpyc_stdlib/stdlib/: EMBED.py
zkpyc_stdlib/stdlib/commitment/pedersen/bls12_381/: hash512bitBool.py
zkpyc_stdlib/stdlib/commitment/pedersen/bn256/: commit.py  hash512bitBool.py
zkpyc_stdlib/stdlib/commitment/pedersen/ristretto255/: hash512bitBool.py
zkpyc_stdlib/stdlib/commitment/sha256/: commit.py  sha256.py
zkpyc_stdlib/stdlib/ecc/: babyjubjubParams.py  edwardsAdd.py  edwardsCompress.py  jubjubParams.py
zkpyc_stdlib/stdlib/hashes/pedersen/: hash512bit.py  hash512bitBool.py  hash512bitBool_jubjub.py
zkpyc_stdlib/stdlib/hashes/poseidon/: hash.py
zkpyc_stdlib/stdlib/hashes/sha256/: sha256.py  shaRound.py
zkpyc_stdlib/stdlib/utils/casts/: int_from_bits.py  int_to_bits.py
zkpyc_stdlib/stdlib/utils/multiplexer/: lookup2bit.py  lookup3bitSigned.py
zkpyc_stdlib/stdlib/utils/pack/bool/: nonStrictUnpack256.py  unpack254_unchecked.py
zkpyc_stdlib/stdlib/zk_types/: types.py
