[package]
name = "zkpyc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lang-c = { version = "0.10.1" }
circ = { git = "https://github.com/circify/circ.git", rev = "a586f7f9" }
circ_fields = { git = "https://github.com/circify/circ.git", rev = "a586f7f9" }
circ_opt = { git = "https://github.com/circify/circ.git", rev = "a586f7f9" }
circ_hc = { git = "https://github.com/circify/circ.git", rev = "a586f7f9", default-features = false, features = ["rc", "lru"]}
log = "0.4"
fxhash = "0.2"
rug = { version = "1.11", features = ["serde"] }
bls12_381 = "0.7"
# dependency for r1cs and bellman fork
bincode = { version = "1.3.3", optional = true }
# all dependencies for bellman fork
bellman = { git = "https://github.com/alex-ozdemir/bellman.git", rev = "94b292b2", optional = true }
ff = { version = "0.12", optional = true }
group = { version = "0.12", optional = true }
pairing = { version = "0.22", optional = true }
serde_bytes = { version = "0.11", optional = true }
gmp-mpfr-sys = { version = "1.4", optional = true }
byteorder = { version = "1", optional = true }
# dependencies for smt solver
rsmt2 = { version = "0.14", optional = true }
ieee754 = { version = "0.2", optional = true}
env_logger = "0.8"
# TEMPORARY
zokrates_parser = { path = "third_party/ZoKrates/zokrates_parser", optional = true }
zokrates_pest_ast = { path = "third_party/ZoKrates/zokrates_pest_ast", optional = true }
typed-arena = { version = "2.0", optional = true }
petgraph = { version = "0.6", optional = true }
# python parser for version CPython >= 3.11.0
rustpython-parser = { version = "0.3.0" }
rustpython-ast = { version = "0.3.0" }
regex = "1.10"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
approx = "0.5.0"

[features]
default = ["r1cs", "bellman", "smt", "zok", "visitor"]
r1cs = ["circ/r1cs", "bincode"]
bellman = ["circ/bellman", "r1cs", "dep:bellman", "ff", "group", "pairing", "serde_bytes", "bincode", "gmp-mpfr-sys", "byteorder"]
smt = ["circ/smt", "rsmt2", "ieee754"]
zok = ["zokrates_parser", "zokrates_pest_ast", "typed-arena", "petgraph"]
visitor = ["rustpython-ast/visitor"]

[profile.release]
debug = true

[[bin]]
name = "zkpyc"

[[bin]]
name = "zk"
required-features = ["r1cs"]
