[package]
name = "zkpyc-core"
version = "0.1.0"
authors = ["Lorenzo Rota <lorenzo.rota@hotmail.com>"]
edition = "2021"

[dependencies]
# dependencies for CirC compiler infrastructure
circ = { git = "https://github.com/circify/circ.git", rev = "a26533ba" }
circ_fields = { git = "https://github.com/circify/circ.git", rev = "a26533ba" }
circ_opt = { git = "https://github.com/circify/circ.git", rev = "a26533ba" }
circ_hc = { git = "https://github.com/circify/circ.git", rev = "a26533ba", default-features = false, features = ["rc", "lru"]}
rand = "0.8"
log = "0.4"
rug = { version = "1.11", features = ["serde"] }
bls12_381 = "0.7"
halo2curves = "0.4"
# dependency for r1cs and bellman fork
bincode = { version = "1.3.3", optional = true }
# all dependencies for bellman fork
bellman = { git = "https://github.com/alex-ozdemir/bellman.git", rev = "94b292b2", optional = true }
ff = { version = "0.12", optional = true, features = ["derive"] }
zeroize = { version = ">=1, <1.4",  default-features = false }
fxhash = "0.2"
group = { version = "0.12", optional = true }
pairing = { version = "0.22", optional = true }
flatbuffers = "0.5.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_bytes = { version = "0.11", optional = true }
gmp-mpfr-sys = { version = "1.4", optional = true, features = ["force-cross"] }
byteorder = { version = "1", optional = true }
zkinterface = "1.3.4"
paste = "1.0"
# dependencies for smt solver
rsmt2 = { version = "0.14", optional = true }
ieee754 = { version = "0.2", optional = true}
env_logger = "0.8"
typed-arena = { version = "2.0", optional = true }
petgraph = { version = "0.6", optional = true }
curve25519-dalek = {version = "3.2.0", features = ["serde"], optional = true}
# python parser for version CPython >= 3.11.0
rustpython-parser = { version = "0.3.0" }
regex = "1.10"
itertools = "0.10.0"
dirs = { version = "3.0.1" }
zkpyc-stdlib = "0.1.0-dev"

[dev-dependencies]
tempfile = "3.16.0"

[features]
default = ["r1cs", "bellman", "smt", "typed-arena", "petgraph", "curve25519-dalek"]
r1cs = ["circ/r1cs", "bincode"]
bellman = ["circ/bellman", "r1cs", "dep:bellman", "ff", "group", "pairing", "serde_bytes", "bincode", "gmp-mpfr-sys", "byteorder"]
smt = ["circ/smt", "rsmt2", "ieee754"]

[profile.release]
debug = false

[[bin]]
name = "zkpyc"

[[bin]]
name = "zk"
required-features = ["r1cs"]
