[package]
name = "zkpyc-python"
version = "0.1.0"
authors = ["Lorenzo Rota"]
edition = "2021"
publish = false
rust-version = "1.63.0"

[dependencies]
#once_cell = "1"
#cfg-if = "1"
pyo3 = { version = "0.20", features = ["abi3-py37"] }
pythonize = { version = "0.20" }
rug = { version = "1.11" }
bincode = "1"
zkpyc-core = { git = "https://github.com/zkpyc/zkpyc.git" }
circ = { git = "https://github.com/circify/circ.git", rev = "a26533ba" }
circ_fields = { git = "https://github.com/circify/circ.git", rev = "a26533ba" }
circ_opt = { git = "https://github.com/circify/circ.git", rev = "a26533ba" }
circ_hc = { git = "https://github.com/circify/circ.git", rev = "a26533ba", default-features = false, features = ["rc", "lru"]}
curve25519-dalek = {version = "3.2.0", features = ["serde"], optional = true}
zkinterface = { version = "1.3.4" }
zkinterface_bellman = { path = "rust/third_party/zkif-bellman" }
zkinterface_bulletproofs = { path = "rust/third_party/zkif-bulletproofs", features = ["yoloproofs"] }

[build-dependencies]
cc = "1.0.83"
fs_extra = "1.1.0"
zkpyc-stdlib = "0.1.0-dev"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module", "curve25519-dalek"]

[lib]
name = "_rust"
crate-type = ["cdylib"]
path = "rust/src/lib.rs"

[profile.release]
overflow-checks = true

#[workspace]
#members = [
#    "rust/third_party/zkif-bellman",
#    "rust/third_party/zkif-bulletproofs"
#]