[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel",
    "setuptools-rust>=1.7.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "zkpyc"
version = "0.1.0"
authors = [
    {name = "Lorenzo Rota", email = "lorenzo.rota@hotmail.com"}
]
description = "Zero-Knowledge Proof Compiler and Toolkit."
readme = "README.md"
license = {text = "Apache-2.0 OR MIT"}
classifiers = [
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: BSD",
    "Operating System :: POSIX :: Linux",
    'Operating System :: Microsoft :: Windows',
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Security :: Cryptography",
]
requires-python = ">=3.10"
dependencies = [
    "mpyc >=0.9",
    "gmpy2 >= 2.0",
]

#[project.urls]
#homepage = "tba"
#documentation = "tba"
#source = "tba"
#issues = "tba"
#changelog = "tba"

[tool.setuptools.packages]
find = { where = ["python"]}

[[tool.setuptools-rust.ext-modules]]
target = "zkpyc.bindings._rust"
#path = "rust/Cargo.toml"
py-limited-api = true
rust-version = ">=1.63.0"
