[package]
name = "zkpyc_python"
version = "0.1.0"
authors = ["Lorenzo Rota"]
edition = "2021"
publish = false
# This specifies the MSRV
rust-version = "1.63.0"

[dependencies]
#once_cell = "1"
#cfg-if = "1"
pyo3 = { version = "0.20", features = ["abi3-py37"] }
pythonize = { version = "0.20" }
rug = { version = "1.11" }
bincode = "1"
zkpyc = { git = "https://github.com/lorenzorota/zkpyc" }
circ = { git = "https://github.com/circify/circ.git", rev = "a26533ba" }
circ_fields = { git = "https://github.com/circify/circ.git", rev = "a26533ba" }
circ_opt = { git = "https://github.com/circify/circ.git", rev = "a26533ba" }
circ_hc = { git = "https://github.com/circify/circ.git", rev = "a26533ba", default-features = false, features = ["rc", "lru"]}
curve25519-dalek = {version = "3.2.0", features = ["serde"], optional = true}
zkinterface = { version = "1.3.4" }
zkinterface_bellman = { path = "zkif-bellman" }
zkinterface_bulletproofs = { path = "zkif-bulletproofs", features = ["yoloproofs"] }


[build-dependencies]
cc = "1.0.83"
zkpyc_stdlib = { git = "https://github.com/lorenzorota/zkpyc" }
fs_extra = "1.1.0"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module", "curve25519-dalek"]

[lib]
name = "zkpyc_rust"
crate-type = ["cdylib"]

[profile.release]
overflow-checks = true

[workspace]
members = [
    "zkif-bellman",
    "zkif-bulletproofs"
]