[package]
name = "zkinterface_bellman"
version = "1.3.4"
authors = ["Aurélien Nicolas <aurel@qed-it.com>"]
license = "MIT"
edition = "2018"
description = "Bellman circuit construction and proving system for zkInterface"
homepage = "https://github.com/QED-it/zkinterface-bellman"
repository = "https://github.com/QED-it/zkinterface-bellman"
keywords = ["zero-knowledge", "zkproof", "cryptography"]

[lib]
name = "zkinterface_bellman"
path = "src/lib.rs"

[[bin]]
name = "zkif_bellman"
path = "src/bin.rs"

[features]
zokrates = ["num-bigint"]

[dependencies]
zkinterface = { version = "1.3.4" }

bellman = "0.8.1"
ff = "0.8.0"
pairing = "0.18.0"
bls12_381 = "0.3.1"

rand = "0.7"
num-bigint = { version = "0.2.2", optional = true}
